fix hamburger menu position on mobile

--- a/index.css
+++ b/index.css
@@ -47,9 +47,4 @@ body {
     body {
         height: 93vh;
     }
-
-    #mobile-nav {
-        position: absolute;
-        bottom: 10px;
-    }
 }
