--- a/styles/about.css
+++ b/styles/about.css
@@ -47,11 +47,6 @@ body {
     .about-me-container > picture {
         margin-bottom: 2rem;
     }
-
-    #mobile-nav {
-        position: sticky;
-        bottom: 10px;
-    }
 }
 
 @media (width <= 425px) {
