--- a/styles/projects.css
+++ b/styles/projects.css
@@ -38,10 +38,3 @@ body {
     box-shadow: none;
     transition: 0.1s ease-in-out;
 }
-
-@media (width <= 768px) {
-    #mobile-nav {
-        position: sticky;
-        bottom: 10px;
-    }
-}
