--- a/styles/resume.css
+++ b/styles/resume.css
@@ -59,9 +59,4 @@ hr {
             margin-top: 1rem;
         }
     }
-
-    #mobile-nav {
-        position: sticky;
-        bottom: 10px;
-    }
 }
